<resources>
    <string name="app_name">App_v2</string>
    <string name="opString">Abierto de: </string>
    <string name="clString">a </string>
    <string name="avCost">Costo promedio: </string>
    <string name="title_activity_places_detail">Map</string>

    <string name="reviews_button">Reviews</string>
    <string name="add_review_button">Add Review</string>

    <string name="searchB">Buscar</string>

    <string name="MainTitle">Categorías</string>

    <!-- Main Options -->

    <string name="Op1_string">Cafesterias</string>
    <string name="Op2_string">Comida internacional</string>
    <string name="Op3_string">Comida y Entretenimiento</string>
    <string name="Op4_string">Categoria 4</string>
    <string name="Op5_string">Categoria 5</string>
    <string name="Op6_string">Categoria 6</string>

</resources>
